@@ -29,6 +29,9 @@ xx/xx/2006 - 1.13.1-WIP
 	  fixup code.  (Anton)
 	- Change ntfsinfo to dump the key data as well as the keys themselves
 	  when dumping the $ObjId/$O index.  (Anton)
+	- ntfsinfo: dump either a minimal (default) or the entire attribute
+	  header (--verbose) for all attributes types. Also removed a lot of
+	  redundant code and made some formatting corrections.  (Szaka)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
